ART 4.14
* Added directDownload url option
* Added File parameter type
* Fix for problem with chained parameter with default values

ART 4.13
* Added overwrite option for record import
* Added German translation (thanks to Carsten Pohle)
* Show start report on home page if configured
* Allow cancelling of running queries
* Fix for default report group selection not working
* Allow date parameters to act as parents for chained parameters

ART 4.12.1
* Fix for error with multi parameter

ART 4.12
* Fix for incorrect export of reports that share datasources
* Fix for report import on sql server
* Added Link report type

ART 4.11
* Added showColumnFilters option for htmlDataTable report format
* Restrict art classes in groovy source
* Consider default report format when running a report
* Allow null value for parameters
* Allow drilldowns not to run immediately
* Updated jackson, velocity-tools, velocity

ART 4.10
* Allow use of grouping in jxls templates
* Fix for incorrect file name on download
* Fix for open password not working for xlsx files
* Allow for HikariCP configuration
* Added jdbc driver for Elasticsearch

ART 4.9
* Added jdbc driver for JSON files
* Added jdbc driver for MongoDB
* Updated morphia. Will require change of package names in report source and groovy-whitelist.txt from org.mongodb.morphia... to dev.morphia...
* Updated mongo java driver

ART 4.8
* Fix for error while upgrading jobs
* Have exact matching for report groups filter in reports page
* Added refreshPeriodSeconds option for reports to allow auto refresh of reports

ART 4.7
* Fix for error with oracle upgrade

ART 4.6
* Corrected run of auto-refresh reports when dashboard parameters are changed
* Better handling of labels being cut-off with vertical bar 2D charts
* Removed couchbase jdbc driver
* Updated jsoup

ART 4.5
* Enable use of windows domain authentication with SMB2

ART 4.4
* Allow chained parameters to use default values
* Fix for large c3.js chart width in tabbed dashboard